--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>AC METHOD?</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/jpg" href="/images/ac.jpeg>
