--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>AC METHOD?</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/jpg" href="/images/ac.jpeg">
   </head>
   <body>
