--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>NO AC METHOD HERE</title>
+    <link rel="icon" type="image/jpg" href="/images/acnone.jpeg">
   </head>
   <body>
     <h1 style="text-align: center ;font-family: Impact ;"> No AC Method Here</h1>
