--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <h1 style="text-align: center ;font-family: Impact ;"> No AC Method Here</h1>
     <br>
     <h2 style="text-align: center ;font-family: Impact ;"> Maybe try somewhere else?</h2>
-    <p style="text-align: center ;">Maybe go <a href="index">home?</a></p>
+    <p style="text-align: center ;">Maybe go <a href="/index">home?</a></p>
   </body>
 </html>
     
