--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1 class="start">AC METHOD IS STLL THE BEST...</h1>
     <h2 class="start">BUT...</h2>
     <br>
+    <h2 class="start">Click <a href="/story" class="start">HERE </a>For The Full Story</h2>
+    <br>
     <p class="middle">AC METHOD HAS BEEN INJURED IN COMBAT AND NEEDS SEVERE MEDICAL TREATMENT</p>
     <p class="middle">AC METHOD HAS BEEN INJURED IN COMBAT AND NEEDS SEVERE MEDICAL TREATMENT</p>
     <p class="middle">AC METHOD HAS BEEN INJURED IN COMBAT AND NEEDS SEVERE MEDICAL TREATMENT</p>
