--- a/story.html
+++ b/story.html
@@ -13,7 +13,7 @@
     <p class="text">AC Method. The wonderful AC method. The amazing AC method has been injured in combat. We are not sure if he will make it. Doctors are franticly
       trying to save him, but the doctors aren't sure if he'll make it. Between the war of AC method and the quadratic formula, it looks like the quad formula has
       taken victory this time. But we can only hope that maybe, one day, AC method will rise again and finally defeat the stinky quadratic formula in the epic
-      battles between AC method and the quad formula</p>
+      battles between AC method and the quad formula.</p>
   </body>
   <!-- BEGIN COPYRIGHT INFORMATION -->
   <div class="crinfo" hidden="true">
