--- a/index.html
+++ b/index.html
@@ -101,5 +101,16 @@
     <p class="middle">AC METHOD HAS BEEN INJURED IN COMBAT AND NEEDS SEVERE MEDICAL TREATMENT</p>
     <p class="middle">AC METHOD HAS BEEN INJURED IN COMBAT AND NEEDS SEVERE MEDICAL TREATMENT</p>
     <p class="middle">AC METHOD HAS BEEN INJURED IN COMBAT AND NEEDS SEVERE MEDICAL TREATMENT</p>
+  </body>
+  <!-- BEGIN COPYRIGHT INFORMATION -->
+  <div class="crinfo" hidden="true">
+    TheHigherUps Classified
+    www.thehigherups.org
+    Created For Entertainment Purposes Only
+    Do Not Distribute
+    For Legal Information Contact support@thehigherups.org
+  </div>
+  <!-- END COPYRIGHT INFORMATION -->
+</html>
     
     
