--- a/story.html
+++ b/story.html
@@ -10,18 +10,41 @@
     <h2 class="story">By TheHigherUps</h2>
     <br>
     <br>
+    <!-- BEGIN VOL 1 -->
+    <h3 class="volume">Volume 1</h3>
+    <h4 class="volume">Oct. 4th, 2021</h4>
     <p class="text">AC Method. The wonderful AC method. The amazing AC method has been injured in combat. We are not sure if he will make it. Doctors are franticly
       trying to save him, but the doctors aren't sure if he'll make it. Between the war of AC method and the quadratic formula, it looks like the quad formula has
       taken victory this time. But we can only hope that maybe, one day, AC method will rise again and finally defeat the stinky quadratic formula in the epic
       battles between AC method and the quad formula.</p>
+    <br>
+    <br>
+    <!-- BEGIN VOL 2 -->
+    <h3 class="volume">Volume 2</h3>
+    <h4 class="volume"> Oct. 5th, 2021</h4>
+    <p class="text">Doctors have finally treated AC method, he has survived. Now it is time for AC method to get revenge on the quad formula for what he has done 
+      to him. AC method begins to plan his revenge on the quad formula. AC method will make sure that the quad formula will pay for what he has done. 
+      AC method is thinking of ideas for revenge when he notices a shadow appear from the corner of his eye in his house. 
+      AC method lives alone, so he knows that someone has broken into his house. AC method knows it must be the quad formula in his house, 
+      so he runs to his closet, quietly opens the door, he has two weapons to choose from. '3x+8x+5=0' or '3(x)-1'. AC method knows that the quad formula
+      would be able to solve the first one, so he grabs the second one. AC method runs out of the closet with '3(x)-1' in hand, he turns the corner and...</p>
+    <p style="color:green"> To Be Continued</p>
+    <br>
+    <br>
+    <!-- BEGIN VOL 3 -->
+    <h3 class="volume" hidden="true">Volume 3</h3>
+    <h2 class="volume" hidden="true">DATE</h2>
+    <p class="text" hidden="true">Enter Text
+      
+    </p>
   </body>
   <!-- BEGIN COPYRIGHT INFORMATION -->
   <div class="crinfo" hidden="true">
-    TheHigherUps Classifed
-    www.thehigherups.org
-    Story created for entertainment purposes only.
-    Do Not Distribute
-    For Legal Information Contact support@thehigherups.org
+    TheHigherUps Classifed<br>
+    www.thehigherups.org<br>
+    Story created for entertainment purposes only.<br>
+    Do Not Distribute<br>
+    For Legal Information Contact support@thehigherups.org<br>
   </div>
   <!-- END COPYRIGHT INFORMATION -->
 </html>
