--- a/story.html
+++ b/story.html
@@ -28,15 +28,21 @@
       AC method lives alone, so he knows that someone has broken into his house. AC method knows it must be the quad formula in his house, 
       so he runs to his closet, quietly opens the door, he has two weapons to choose from. '3x+8x+5=0' or '3(x)-1'. AC method knows that the quad formula
       would be able to solve the first one, so he grabs the second one. AC method runs out of the closet with '3(x)-1' in hand, he turns the corner and...</p>
-    <p style="color:green"> To Be Continued</p>
+    <p style="color:green; font-size: 20px ;"> To Be Continued</p>
     <br>
     <br>
     <!-- BEGIN VOL 3 -->
-    <h3 class="volume" hidden="true">Volume 3</h3>
-    <h2 class="volume" hidden="true">DATE</h2>
-    <p class="text" hidden="true">Enter Text
-      
+    <h3 class="volume">Volume 3</h3>
+    <h2 class="volume">Oct 7, 2021</h2>
+    <p class="text">
+    It wasn't the quad formula. It was something worse. <b>IT WAS FUCKING COMPLETING THE SQAURE! </b>Completing the square(cts) had broke into AC methods house and planned
+      to attack him. This is something totally unexpected. CTS is 100x worse than the quad formula. Quickly, AC method throws 3(x)+1 at CTS -- S U P E R  E F F E C T I V E --
+      Just kidding. Nothing happened. It literally did nothing. They are just numbers. CTS one taps AC method and once again, he has been injured in combat this time by CTS.
     </p>
+    <br>
+    <br>
+    <!-- START VOL 4 -->
+    
   </body>
   <!-- BEGIN COPYRIGHT INFORMATION -->
   <div class="crinfo" hidden="true">
