--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>AC METHOD?</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/jpg" href="/images/ac.jpeg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1 class="start">AC METHOD IS STLL THE BEST...</h1>
