--- a/story.html
+++ b/story.html
@@ -29,7 +29,6 @@
       AC method lives alone, so he knows that someone has broken into his house. AC method knows it must be the quad formula in his house, 
       so he runs to his closet, quietly opens the door, he has two weapons to choose from. '3x+8x+5=0' or '3(x)-1'. AC method knows that the quad formula
       would be able to solve the first one, so he grabs the second one. AC method runs out of the closet with '3(x)-1' in hand, he turns the corner and...</p>
-    <p style="color:green; font-size: 20px ;"> To Be Continued</p>
     <br>
     <br>
     <!-- BEGIN VOL 3 -->
@@ -43,7 +42,17 @@
     <br>
     <br>
     <!-- START VOL 4 -->
-    
+    <h3 class="volume">Volume 4</h3>
+    <h2 class="volume">Dec 10, 2021</h2>
+    <p class="text">
+      Bad news. AC METHOD as been injured once again, and this time it is really bad. A new enemy has enetered the story. It's the midpoint. The midpoint has a 
+      thing for attacking people in the middle of the body, including this time. AC METHOD has been hit in the middle of the chest, puncturing his left lung. This
+      time he might not make it. The only possiblity that he can survive is if someone will donate a lung to him. Unfortuatly not many people want to dontate their
+      lung to AC METHOD — Not many people like him. But thankfully someone was willing to donate their lung to AC METHOD. That person is...
+    </p>
+    <p style="color:green; font-size: 20px ;"> To Be Continued</p>
+    <br>
+    <br>
   </body>
   <!-- BEGIN COPYRIGHT INFORMATION -->
   <div class="crinfo" hidden="true">
