--- a/story/index.html
+++ b/story/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>The Full Story</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/jpg" href="images/ac.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -12,7 +12,7 @@
     <br>
     <br>
     <div class="volumes">
-      <div class="volume">
+      <div class="content">
         <h1>Volume 1</h1>
         <a href="/volume-1" class="vol vol-1">Click here for volume 1</a>
       </div>
