--- a/story/index.html
+++ b/story/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>The Full Story</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" type="image/jpg" href="images/ac.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
