--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
   <head>
     <title>NO AC METHOD HERE</title>
     <link rel="icon" type="image/jpg" href="/images/acnone.jpeg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1 style="text-align: center ;font-family: Impact ;"> No AC Method Here</h1>
