--- a/story/index.html
+++ b/story/index.html
@@ -14,6 +14,6 @@
     <div class="volumes">
       <div class="content">
         <h1>Volume 1</h1>
-        <a href="/volume-1" class="vol vol-1">Click here for volume 1</a>
+        <a href="volume-1" class="vol vol-1">Click here for volume 1</a>
       </div>
     </div>
