--- a/story/volume-1.html
+++ b/story/volume-1.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+   <div style="width: 50%;"> 
     <h1 class="story">AC METHOD - VOLUME 1</h1>
     <h2 class="story">By TheHigherUps</h2>
     <h3 class="volume">Volume 1</h3>
@@ -15,6 +16,7 @@
       trying to save him, but the doctors aren't sure if he'll make it. Between the war of AC method and the quadratic formula, it looks like the quad formula has
       taken victory this time. But we can only hope that maybe, one day, AC method will rise again and finally defeat the stinky quadratic formula in the epic
       battles between AC method and the quad formula.</p>
+    </div>
   </body>
 </html>
      
