--- a/story/volume-1.html
+++ b/story/volume-1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-   <div style="width: 50%;"> 
+   <div style="width: 50%; margin: 0 auto;"> 
     <h1 class="story">AC METHOD - VOLUME 1</h1>
     <h2 class="story">By TheHigherUps</h2>
     <h3 class="volume">Volume 1</h3>
