--- a/story/index.html
+++ b/story/index.html
@@ -14,6 +14,14 @@
     <div class="volumes">
       <div class="content">
         <h1>Volume 1</h1>
-        <a href="volume-1" class="vol vol-1">Click here for volume 1</a>
+        <a href="volume-1" class="vol" id="vol-1">Click here for volume 1</a>
+        <br>
+        <h1>Volume 2</h1>
+        <a href="volume-2" class="vol" id="vol-2">Click here for volume 2</a>
+        <br>
+        <h1>Volume 3</h1>
+        <a href="volume-3" class="vol" id="vol-3">Click here for volume 3</a>
       </div>
     </div>
+  </body>
+</html>
